--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>GIitチュートリアル</h1>
 <p>git status</p>
 <p>git diff</p>
-<p>git commit --amend</p>
-
+<p>git commit --amend</p>>
+<p>git merge</p>
 
